--- a/Desktop/src/app/themes/flatLight.css
+++ b/Desktop/src/app/themes/flatLight.css
@@ -1,14 +1,14 @@
 :root {
 	/*   color variables */
 	--clr-primary: #0e48fe;
-	--background: rgb(22, 22, 22);
+	--background: #bebebe;
 	--radius: 0.2rem;
 	--main-back: null;
 	--mainText-back: null;
 	--videoName-text-weight: 800;
 	--videoCreater-text-weight: 100;
 	--timeBar-back-graident: linear-gradient(to top,grey,lightgrey);
-	--timeBar-graident: linear-gradient(to left,rgb(181, 38, 150),rgb(47, 123, 193));
+	--timeBar-graident: linear-gradient(to left,rgb(0, 3, 181),rgb(21, 19, 104));
 	--timeBar-color-backup: rgb(0, 153, 255);
 }
 
@@ -17,6 +17,7 @@ body {
 	color: white;
 	font-family: Mukta, Helvetica, sans-serif;
 	overflow: hidden;
+
 }
 
 
@@ -26,6 +27,7 @@ body {
 	width: max-content;
 	height: max-content;
 	overflow: hidden;
+	max-width: 98%;
 }
 
 #video_image{
@@ -39,7 +41,13 @@ body {
 }
 
 #main_text{
-	background:var(--mainText-back)
+	margin-left: 15px;
+	background:var(--mainText-back);
+	border-radius: 10px;
+	background: #a8a8a8;
+	box-shadow: inset 20px 20px 60px #8f8f8f,
+				inset -20px -20px 60px #c1c1c1;
+	/* color: rgb(0, 0, 0); */
 }
 
 #video_name{
@@ -60,23 +68,25 @@ body {
 
 
 
-
 #time-content {
 	top: 2vh;
 	width: 100%;
-	height: 5px;
-	background: var(--timeBar-back-graident);
+	height: 6px;
+	/* background: var(--timeBar-back-graident); */
 	border-radius: 1px;
 	display: block;
 	position: relative;
 	border-radius: 1px;
+	background: #7c7c7c;
+	box-shadow: inset 2px 2px 4px #696969,
+				inset -2px -2px 4px #8f8f8f;
 	/* overflow: hidden; */
 }
 
 #time_bar{
 	margin-top: 5%;
 	width: 50%;
-	height: 5px;
+	height: 6px;
 	background-size: 120%;
 	background-color: var(--timeBar-color-backup);
 	background-image: var(--timeBar-graident)
