--- a/Desktop/app/themes/winAcrylic.css
+++ b/Desktop/app/themes/winAcrylic.css
@@ -1,3 +1,7 @@
+html, body{
+	background: transparent !important;
+}
+
 :root {
 	/*   color variables */
 	--clr-primary: #0e48fe;
@@ -8,7 +12,7 @@
 	--videoName-text-weight: 800;
 	--videoCreater-text-weight: 100;
 	--timeBar-back-graident: linear-gradient(to top,grey,lightgrey);
-	--timeBar-graident: linear-gradient(to left,rgb(181, 38, 150),rgb(47, 123, 193));
+	--timeBar-graident: linear-gradient(to left,rgb(200, 200, 200),rgb(100, 100, 100));
 	--timeBar-color-backup: rgb(0, 153, 255);
 }
 
@@ -17,9 +21,7 @@ body {
 	color: white;
 	font-family: Mukta, Helvetica, sans-serif;
 	overflow: hidden;
-
 }
-
 
 
 #main{
@@ -28,7 +30,10 @@ body {
 	width: max-content;
 	height: max-content;
 	overflow: hidden;
+	/* max-width: 98%; */
 }
+
+
 
 #video_image{
 	top: 2vh;
@@ -41,7 +46,12 @@ body {
 }
 
 #main_text{
-	background:var(--mainText-back)
+	margin-left: 15px;
+	background:var(--mainText-back);
+	border-radius: 10px;
+	box-shadow: inset 28px 28px 56px #101010,
+	inset -28px -28px 56px #1c1c1c;
+	max-width: 240px;
 }
 
 #video_name{
@@ -50,6 +60,9 @@ body {
 	font-weight: var(--videoName-text-weight);
 	overflow: hidden ;
 	inline-size: 280px;
+	/* width: max-content; */
+	max-width: fit-content;
+
 }
 
 #video_creater{
@@ -57,7 +70,12 @@ body {
 	font-weight: var(--videoCreater-text-weight);
 	font-size:medium;
 	overflow: hidden ;
-	inline-size: 285px;
+
+	inline-size: auto;
+	word-wrap: break-word;
+	/* width: max-content; */
+	max-width: fit-content;
+
 }
 
 
@@ -66,19 +84,23 @@ body {
 #time-content {
 	top: 2vh;
 	width: 100%;
-	height: 5px;
-	background: var(--timeBar-back-graident);
+	height: 6px;
+	/* background: var(--timeBar-back-graident); */
 	border-radius: 1px;
 	display: block;
 	position: relative;
 	border-radius: 1px;
+	background: linear-gradient(145deg, #212121, #282828);
+	box-shadow: inset 2px 2px 8px #1e1e1e,
+	inset -2px -2px 8px #3b3b3b;
 	/* overflow: hidden; */
+	
 }
 
 #time_bar{
 	margin-top: 5%;
 	width: 50%;
-	height: 5px;
+	height: 6px;
 	background-size: 120%;
 	background-color: var(--timeBar-color-backup);
 	background-image: var(--timeBar-graident)
@@ -92,6 +114,7 @@ body {
 	top : -2px;
 	position: relative;
 	margin-top: 0%;
+	
 }
 
 
