--- a/Desktop/app/themes/flatLight.css
+++ b/Desktop/app/themes/flatLight.css
@@ -1,128 +1,124 @@
 :root {
-	/*   color variables */
-	--clr-primary: #0e48fe;
-	--background: #bebebe;
-	--radius: 0.2rem;
-	--main-back: null;
-	--mainText-back: null;
-	--videoName-text-weight: 800;
-	--videoCreater-text-weight: 100;
-	--timeBar-back-graident: linear-gradient(to top,grey,lightgrey);
-	--timeBar-graident: linear-gradient(to left,rgb(0, 3, 181),rgb(21, 19, 104));
-	--timeBar-color-backup: rgb(0, 153, 255);
+    /*   color variables */
+    --clr-primary: #0e48fe;
+    --background: #bebebe;
+    --radius: 0.2rem;
+    --main-back: null;
+    --mainText-back: null;
+    --videoName-text-weight: 800;
+    --videoCreater-text-weight: 100;
+    --timeBar-back-graident: linear-gradient(to top, grey, lightgrey);
+    --timeBar-graident: linear-gradient(
+        to left,
+        rgb(0, 3, 181),
+        rgb(21, 19, 104)
+    );
+    --timeBar-color-backup: rgb(0, 153, 255);
 }
 
 body {
-	background-color: var(--background);
-	color: white;
-	font-family: Mukta, Helvetica, sans-serif;
-	overflow: hidden;
-
+    background-color: var(--background);
+    color: white;
+    font-family: Mukta, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
-
-#main{
-	background: var(--main-back);
-	display: flex;
-	width: max-content;
-	height: max-content;
-	overflow: hidden;
-	max-width: 98%;
+#main {
+    background: var(--main-back);
+    display: flex;
+    width: max-content;
+    height: max-content;
+    overflow: hidden;
+    max-width: 98%;
 }
 
-#video_image{
-	top: 2vh;
-	background: no-repeat center/100% url('../YTlogo4.png');
-	object-fit: cover;
-	position: relative;
-	display: inline-block;
-	height: 35vw;
-	width: 35vw;
+#video_image {
+    top: 2vh;
+    background: no-repeat center/100% url("../YTlogo4.png");
+    object-fit: cover;
+    position: relative;
+    display: inline-block;
+    height: 35vw;
+    width: 35vw;
 }
 
-#main_text{
-	margin-left: 15px;
-	background:var(--mainText-back);
-	border-radius: 10px;
-	background: #a8a8a8;
-	box-shadow: inset 20px 20px 60px #8f8f8f,
-				inset -20px -20px 60px #c1c1c1;
-	/* color: rgb(0, 0, 0); */
+#main_text {
+    margin-left: 15px;
+    background: var(--mainText-back);
+    border-radius: 10px;
+    background: #a8a8a8;
+    box-shadow: inset 20px 20px 60px #8f8f8f, inset -20px -20px 60px #c1c1c1;
+    /* color: rgb(0, 0, 0); */
 }
 
-#video_name{
-	margin-left: 4%;
-	font-size: large;
-	font-weight: var(--videoName-text-weight);
-	overflow: hidden ;
-	inline-size: 280px;
+#video_name {
+    margin-left: 4%;
+    font-size: large;
+    font-weight: var(--videoName-text-weight);
+    overflow: hidden;
+    inline-size: 280px;
 }
 
-#video_creater{
-	margin-left: 4%;
-	font-weight: var(--videoCreater-text-weight);
-	font-size:medium;
-	overflow: hidden ;
-	inline-size: 285px;
+#video_creater {
+    margin-left: 4%;
+    font-weight: var(--videoCreater-text-weight);
+    font-size: medium;
+    overflow: hidden;
+    inline-size: 285px;
 }
-
-
 
 #time-content {
-	top: 2vh;
-	width: 100%;
-	height: 6px;
-	/* background: var(--timeBar-back-graident); */
-	border-radius: 1px;
-	display: block;
-	position: relative;
-	border-radius: 1px;
-	background: #7c7c7c;
-	box-shadow: inset 2px 2px 4px #696969,
-				inset -2px -2px 4px #8f8f8f;
-	/* overflow: hidden; */
+    top: 2vh;
+    width: 100%;
+    height: 6px;
+    /* background: var(--timeBar-back-graident); */
+    border-radius: 1px;
+    display: block;
+    position: relative;
+    border-radius: 1px;
+    background: #7c7c7c;
+    box-shadow: inset 2px 2px 4px #696969, inset -2px -2px 4px #8f8f8f;
+    /* overflow: hidden; */
 }
 
-#time_bar{
-	margin-top: 5%;
-	width: 50%;
-	height: 6px;
-	background-size: 120%;
-	background-color: var(--timeBar-color-backup);
-	background-image: var(--timeBar-graident)
+#time_bar {
+    margin-top: 5%;
+    width: 50%;
+    height: 6px;
+    background-size: 120%;
+    background-color: var(--timeBar-color-backup);
+    background-image: var(--timeBar-graident);
 }
 
-#time{
-	text-align: center;
-	border-radius: 1px;
-	font-size: larger;
-	font-weight: 500;
-	top : -2px;
-	position: relative;
-	margin-top: 0%;
+#time {
+    text-align: center;
+    border-radius: 1px;
+    font-size: larger;
+    font-weight: 500;
+    top: -2px;
+    position: relative;
+    margin-top: 0%;
 }
 
-
-#settings{
-	left: 1%;
-	bottom: 1%;
-	height: 35px;
-	width: 25px;
-	overflow: hidden;
-	position: fixed;
-	font-size: 22px;
+#settings {
+    left: 1%;
+    bottom: 1%;
+    height: 35px;
+    width: 25px;
+    overflow: hidden;
+    position: fixed;
+    font-size: 22px;
 }
 
-#settings:hover{
-	background: linear-gradient(to top,rgb(181, 38, 150),rgb(47, 123, 193));
-	-webkit-background-clip: text;
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
+#settings:hover {
+    background: linear-gradient(to top, rgb(181, 38, 150), rgb(47, 123, 193));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-
-.text{
-	font-size: 1.2rem;
-	font-weight: 200;
-	overflow: wrap;
+.text {
+    font-size: 1.2rem;
+    font-weight: 200;
+    overflow: wrap;
 }
