🔥Fixed Hot fetch
Fixed having more then one tab being open

--- a/Desktop/app/themes/neonDark.css
+++ b/Desktop/app/themes/neonDark.css
@@ -72,7 +72,9 @@ body {
     border-radius: 1px;
     /* overflow: hidden; */
 }
-
+#text-theme-box{
+    position: absolute;
+}
 #time_bar {
     margin-top: 5%;
     width: 50%;
