Fixed spelling, Fixed title overflow

--- a/Desktop/app/css/style.css
+++ b/Desktop/app/css/style.css
@@ -50,7 +50,7 @@ body {
     inline-size: 280px;
 }
 
-#video_creater {
+#video_creator {
     margin-left: 4%;
     font-weight: 100;
     font-size: medium;
