--- a/Desktop/app/themes/winAcrylic.css
+++ b/Desktop/app/themes/winAcrylic.css
@@ -10,7 +10,7 @@ html,body {
     --main-back: null;
     --mainText-back: null;
     --videoName-text-weight: 800;
-    --videoCreater-text-weight: 100;
+    --videocreator-text-weight: 100;
     --timeBar-back-graident: linear-gradient(to top, grey, lightgrey);
     --timeBar-graident: linear-gradient(
         to left,
@@ -64,9 +64,9 @@ body {
     max-width: fit-content;
 }
 
-#video_creater {
+#video_creator {
     margin-left: 4%;
-    font-weight: var(--videoCreater-text-weight);
+    font-weight: var(--videocreator-text-weight);
     font-size: medium;
     overflow: hidden;
 
