--- a/Desktop/app/themes/neonLight.css
+++ b/Desktop/app/themes/neonLight.css
@@ -33,6 +33,7 @@ body {
     width: max-content;
     height: max-content;
     overflow: hidden;
+    /* max-width: 98%; */
 }
 
 #video_image {
@@ -46,8 +47,11 @@ body {
 }
 
 #main_text {
+    margin-left: 15px;
     background: var(--mainText-back);
-    color: black;
+    border-radius: 10px;
+    box-shadow: inset 28px 28px 56px #101010, inset -28px -28px 56px #1c1c1c;
+    max-width: 240px;
 }
 
 #video_name {
@@ -56,6 +60,8 @@ body {
     font-weight: var(--videoName-text-weight);
     overflow: hidden;
     inline-size: 280px;
+    /* width: max-content; */
+    max-width: fit-content;
 }
 
 #video_creator {
@@ -63,26 +69,31 @@ body {
     font-weight: var(--videocreator-text-weight);
     font-size: medium;
     overflow: hidden;
-    inline-size: 285px;
+
+    inline-size: auto;
+    word-wrap: break-word;
+    /* width: max-content; */
+    max-width: fit-content;
 }
 
 #time-content {
     top: 2vh;
     width: 100%;
-    height: 5px;
-    background: var(--timeBar-back-graident);
+    height: 6px;
+    /* background: var(--timeBar-back-graident); */
     border-radius: 1px;
     display: block;
     position: relative;
     border-radius: 1px;
+    background: linear-gradient(145deg, #898989, #dedede);
+    box-shadow: inset 2px 2px 8px #1e1e1e, inset -2px -2px 8px #3b3b3b;
     /* overflow: hidden; */
-    color: black;
 }
 
 #time_bar {
     margin-top: 5%;
     width: 50%;
-    height: 5px;
+    height: 6px;
     background-size: 120%;
     background-color: var(--timeBar-color-backup);
     background-image: var(--timeBar-graident);
