--- a/Desktop/app/themes/ipodClassic.css
+++ b/Desktop/app/themes/ipodClassic.css
@@ -1,28 +1,27 @@
-
-
 :root {
     /*   color variables */
     --clr-primary: #0e48fe;
-    --background: rgb(22, 22, 22);
+    --background: #f5f5f5;
     --radius: 0.2rem;
     --main-back: null;
     --mainText-back: null;
     --videoName-text-weight: 800;
     --videocreator-text-weight: 100;
-    --timeBar-back-graident: linear-gradient(to top, grey, lightgrey);
-    --timeBar-graident: linear-gradient(
-        to left,
-        rgb(181, 38, 150),
-        rgb(47, 123, 193)
+    --timeBar-back-graident: linear-gradient(
+        to top,
+        rgb(90, 90, 90),
+        rgb(143, 143, 143)
     );
-    --timeBar-color-backup: rgb(0, 153, 255);
+    --timeBar-graident: linear-gradient(to top, #3bb0ff, #2a95dc, #90d3ff94, #2c5ee7);
+    /* --timeBar-color-backup: rgb(0, 153, 255); */
 }
 
 body {
     background-color: var(--background);
-    color: white;
-    font-family: Mukta, Helvetica, sans-serif;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
+    font-weight: bold;
 }
 
 #main {
@@ -31,6 +30,7 @@ body {
     width: max-content;
     height: max-content;
     overflow: hidden;
+    /* max-width: 98%; */
 }
 
 #video_image {
@@ -57,6 +57,7 @@ body {
     font-weight: var(--videoName-text-weight);
     overflow: hidden;
     inline-size: 280px;
+    /* width: max-content; */
     max-width: fit-content;
 }
 
@@ -65,31 +66,37 @@ body {
     font-weight: var(--videocreator-text-weight);
     font-size: medium;
     overflow: hidden;
+
     inline-size: auto;
     word-wrap: break-word;
+    /* width: max-content; */
     max-width: fit-content;
 }
 
 #time-content {
     top: 2vh;
     width: 100%;
-    height: 6px;
+    height: 16px;
     /* background: var(--timeBar-back-graident); */
     border-radius: 1px;
     display: block;
     position: relative;
     border-radius: 1px;
-    background: linear-gradient(145deg, #212121, #282828);
-    /* box-shadow: inset 2px 2px 8px #1e1e1e, inset -2px -2px 8px #3b3b3b; */
+    background: linear-gradient(to top, #ffffff, white, #c7c7c7, #e2e2e2);
+    box-shadow: inset 0px -1px 4px #777777, inset 0px 1px 4px #777777;
+    
+    /* overflow: hidden; */
 }
 
 #time_bar {
-    margin-top: 5%;
+    margin-top: 3%;
     width: 50%;
-    height: 6px;
+    height: 16px;
     background-size: 120%;
     background-color: var(--timeBar-color-backup);
     background-image: var(--timeBar-graident);
+    /* background: linear-gradient(to top, #ffffff, white,#c7c7c7, #e2e2e2); */
+    box-shadow: inset 0px -1px 4px #777777, inset 0px 1px 4px #777777;
 }
 
 #time {
